--- a/crawling/img_download.ipynb
+++ b/crawling/img_download.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,27 +22,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os "
+    "import os \n",
+    "from selenium.webdriver.common.keys import Keys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "driver = webdriver.Chrome()\n",
-    "url = \"https://pixabay.com/ko/photos/search/%EB%B4%84/\"\n",
+    "url = \"https://pixabay.com/ko\"\n",
     "driver.get(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = driver.find_element(by=By.NAME, value=\"q\")\n",
+    "q.send_keys(\"여름\")\n",
+    "q.send_keys(Keys.RETURN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,12 +75,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     " \n",
-    "season = \"spring\"\n",
+    "season = \"summer\"\n",
     "\n",
     "img_folder = './{}'.format(season)\n",
     "if not os.path.isdir(img_folder) : # 없으면 새로 생성하는 조건문 \n",
