--- a/practice_file.ipynb
+++ b/practice_file.ipynb
@@ -353,26 +353,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2063149262912\n",
-      "140722321823792\n",
-      "140722321823824\n",
-      "140722321823856\n"
+      "3\n"
      ]
     }
    ],
    "source": [
-    "a = [x,y,z]\n",
-    "print(id(a))\n",
-    "\n",
-    "for i in range(len(a)):\n",
-    "  print(id(a[i]))"
+    "a = 1\n",
+    "b = 2\n",
+    "c = a + b\n",
+    "print(c)"
    ]
   },
   {
