--- a/crawling/naver_hearts.ipynb
+++ b/crawling/naver_hearts.ipynb
@@ -38,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "time.sleep(2)\n",
-    "for i in range(1):\n",
+    "for i in range(1, 5):\n",
     "    url = \"https://section.blog.naver.com/BlogHome.naver?directoryNo=0&currentPage={}&groupId=0\".format(i+1)\n",
     "    driver.get(url)\n",
     "    time.sleep(3)\n",
