--- a/Coding_test/2022/05/220505_cote.ipynb
+++ b/Coding_test/2022/05/220505_cote.ipynb
@@ -79,7 +79,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n = int(input())\n",
+    "arr = [1] * n\n",
+    "\n",
+    "if n >= 2:\n",
+    "    arr[1] = 2    \n",
+    "    for i in range(2, n):\n",
+    "        arr[i] = arr[i-1] + arr[i-2]\n",
+    "\n",
+    "print(arr[-1]%10007)"
+   ]
   }
  ],
  "metadata": {
