--- a/Coding_test/2022/05/220508_cote.ipynb
+++ b/Coding_test/2022/05/220508_cote.ipynb
@@ -58,6 +58,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 숨바꼭질"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "def bfs():\n",
+    "    q = deque()\n",
+    "    q.append(n)\n",
+    "    while q:\n",
+    "        x = q.popleft()\n",
+    "        if x == k:\n",
+    "            print(graph[x])\n",
+    "            break\n",
+    "        for nx in (x - 1, x + 1, x * 2):\n",
+    "            if 0 <= nx <= 100000 and not graph[nx]:\n",
+    "                graph[nx] = graph[x] + 1\n",
+    "                q.append(nx)\n",
+    "\n",
+    "n, k = map(int, input().split())\n",
+    "graph = [0] * 100001\n",
+    "bfs()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
